fix(css): table overflowing

--- a/site/src/.static/styles/md.css
+++ b/site/src/.static/styles/md.css
@@ -24,17 +24,22 @@
 }
 
 /* tables */
+.src-md .table-wrapper {
+    margin: 1rem 0;
+    overflow: auto;
+    display: block;
+}
 .src-md table.inline p {
     margin: unset;
 }
 .src-md table.inline {
+    margin: 0 auto;
     max-width: 100%;
     min-width: 70%;
     width: max-content;
     border-spacing: 0 0;
     border-collapse: separate;
     border-radius: 15px;
-    margin: 1rem auto;
 
 }
 .src-md table.inline th,
